force-app/main/default/objects/Vacancy__c/fields/DetailBannerArt__c.field-meta.xml
<CustomField>
    <fullName>DetailBannerArt__c</fullName>
    <description>The artwork that is displayed in the banner of the detail page.</description>
    <label>Detail Banner Art</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VacancyDetailArt</valueSetName>
    </valueSet>
</CustomField>