force-app/main/default/objects/Vacancy__c/fields/IconArt__c.field-meta.xml
<CustomField>
    <fullName>IconArt__c</fullName>
    <label>Icon Art</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VacancyIconArt</valueSetName>
    </valueSet>
</CustomField>