force-app/main/default/objects/Vacancy__c/fields/Intro__c.field-meta.xml
<CustomField>
    <fullName>Intro__c</fullName>
    <description>Short text to describe the position on the grid.</description>
    <label>Intro</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>