force-app/main/default/objects/Vacancy__c/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, this job will not be visible to guests.</description>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>