force-app/main/default/objects/Vacancy__c/fields/LocationType__c.field-meta.xml
<CustomField>
    <fullName>LocationType__c</fullName>
    <defaultValue>&quot;TELECOMMUTE&quot;</defaultValue>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TELECOMMUTE</fullName>
            </value>
            <value>
                <fullName>OFFICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>