force-app/main/default/objects/Vacancy__c/fields/OtherInformation__c.field-meta.xml
<CustomField>
    <fullName>OtherInformation__c</fullName>
    <description>Any other information like extra credits goes here.</description>
    <label>Other Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>