force-app/main/default/objects/Vacancy__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>What does the position entail? Each line is rendered as a bullet point.</description>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>