force-app/main/default/objects/Vacancy__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <description>List the requirements for the role. Each line is displayed as a bullet point.</description>
    <label>Qualifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>