force-app/main/default/objects/Vacancy__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <description>Exactly what it means.</description>
    <label>Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>