force-app/main/default/objects/Vacancy__c/fields/VacancyID__c.field-meta.xml
<CustomField>
    <fullName>VacancyID__c</fullName>
    <displayFormat>JD-{00000}</displayFormat>
    <label>Vacancy ID</label>
    <type>AutoNumber</type>
</CustomField>